@@ -2,6 +2,7 @@
 README
 #--------------------------------------------------------------------------------------
 
+Copyright (C) 2010- Alexey Petrov
 Copyright (C) 2009-2010 Pebble Bed Modular Reactor (Pty) Limited (PBMR)
 
 This program is free software: you can redistribute it and/or modify
@@ -17,7 +18,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-See https://csrcs.pbmr.co.za/svn/nea/prototypes/reaktor/unv2foam
+See http://sourceforge.net/projects/pythonflu
 
 #--------------------------------------------------------------------------------------
 Introduction
